--- a/src/sass/components/_news-previews.sass
+++ b/src/sass/components/_news-previews.sass
@@ -26,7 +26,7 @@ $news-previews-inner-space--sm: 20px
 	+font(1.5rem, round-float(18px/15px, 2))
 	letter-spacing: normal
 
-	+media('<tab-sm')
+	+media('<tab-lg')
 		width: round-float(100%/1, 4)
 
 .news-previews__inner
