--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -62,7 +62,7 @@
 @import components/user-form
 @import components/enter-form
 @import components/user-options
-@import components/search-form.sass
+@import components/search-form
 @import components/bitrix-search
 @import components/pagination-2
 @import components/feature-list
