--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -189,6 +189,16 @@ $catalog-menu-tab-height: 70px !default
 $catalog-categories-width--full: 280px !default
 $catalog-categories-width--short: 80px !default
 
+// nav
+$nav-horizontal-space: 20px !default
+$nav-arrow-size: 50px !default
+$nav-text-color: $text-color !default
+$nav-bg-color: #333 !default
+$nav-bg-color-s: #333 !default
+$nav-bg-color-ss: #333 !default
+$nav-bg-color-sss: #333 !default
+$nav-bg-color-ssss: #333 !default
+
 // footer
 $footer-nav-horizontal-space: 40px
 
