--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -307,6 +307,18 @@
 		+media('>=desk-lg')
 			display: block !important
 
+	&.current > .catalog-menu__tab
+
+		&, .no-touchevents &
+
+			a, a:hover
+				color: white
+
+		.ea-site &, .no-touchevents .ea-site  &
+
+			a, a:hover
+				color: white
+
 // СТРЕЛКИ навигации
 .catalog-menu__angle, .side-menu-arr
 	position: absolute
